crates/pgls_pretty_print/tests/snapshots/multi/tests__union_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/union.sql
snapshot_kind: text
---
SELECT 1 AS two UNION SELECT 2 ORDER BY 1;

SELECT 1 AS one UNION SELECT 1 ORDER BY 1;

SELECT 1 AS two UNION ALL SELECT 2;

SELECT 1 AS two UNION ALL SELECT 1;

SELECT 1 AS three UNION SELECT 2 UNION SELECT 3 ORDER BY 1;

SELECT 1 AS two UNION SELECT 2 UNION SELECT 2 ORDER BY 1;

SELECT 1 AS three UNION SELECT 2 UNION ALL SELECT 2 ORDER BY 1;

SELECT 1.1 AS two UNION SELECT 2.2 ORDER BY 1;

SELECT 1.1 AS two UNION SELECT 2 ORDER BY 1;

SELECT 1 AS two UNION SELECT 2.2 ORDER BY 1;

SELECT 1 AS one UNION SELECT CAST(1.0 AS DOUBLE PRECISION) ORDER BY 1;

SELECT 1.1 AS two UNION ALL SELECT 2 ORDER BY 1;

SELECT CAST(1.0 AS DOUBLE PRECISION) AS two UNION ALL SELECT 1 ORDER BY 1;

SELECT 1.1 AS three UNION SELECT 2 UNION SELECT 3 ORDER BY 1;

SELECT
  CAST(1.1 AS DOUBLE PRECISION) AS two
UNION
SELECT 2
UNION
SELECT CAST(2.0 AS DOUBLE PRECISION)
ORDER BY 1;

SELECT 1.1 AS three UNION SELECT 2 UNION ALL SELECT 2 ORDER BY 1;

SELECT 1.1 AS two UNION (SELECT 2 UNION ALL SELECT 2) ORDER BY 1;

SELECT f1 AS five FROM float8_tbl UNION SELECT f1 FROM float8_tbl ORDER BY 1;

SELECT f1 AS ten FROM float8_tbl UNION ALL SELECT f1 FROM float8_tbl;

SELECT f1 AS nine FROM float8_tbl UNION SELECT f1 FROM int4_tbl ORDER BY 1;

SELECT f1 AS ten FROM float8_tbl UNION ALL SELECT f1 FROM int4_tbl;

SELECT
  f1 AS five
FROM
  float8_tbl
WHERE
  f1 BETWEEN -1e6 AND 1e6
UNION
SELECT
  f1
FROM
  int4_tbl
WHERE
  f1 BETWEEN 0 AND 1000000
ORDER BY 1;

SELECT
  CAST(f1 AS CHAR(4)) AS three
FROM
  varchar_tbl
UNION
SELECT f1 FROM char_tbl
ORDER BY 1;

SELECT f1 AS three FROM varchar_tbl
UNION
SELECT CAST(f1 AS VARCHAR) FROM char_tbl
ORDER BY 1;

SELECT f1 AS eight FROM varchar_tbl UNION ALL SELECT f1 FROM char_tbl;

SELECT f1 AS five FROM text_tbl
UNION
SELECT f1 FROM varchar_tbl
UNION
SELECT rtrim(f1) FROM char_tbl
ORDER BY 1;

SELECT q1 FROM int8_tbl ORDER BY 1;

SELECT q2 FROM int8_tbl INTERSECT ALL SELECT q1 FROM int8_tbl ORDER BY 1;

SELECT q2 FROM int8_tbl EXCEPT SELECT q1 FROM int8_tbl ORDER BY 1;

SELECT q2 FROM int8_tbl EXCEPT ALL SELECT q1 FROM int8_tbl ORDER BY 1;

SELECT q2 FROM int8_tbl EXCEPT ALL SELECT DISTINCT q1 FROM int8_tbl ORDER BY 1;

SELECT q1 FROM int8_tbl EXCEPT SELECT q2 FROM int8_tbl ORDER BY 1;

SELECT q1 FROM int8_tbl EXCEPT ALL SELECT q2 FROM int8_tbl ORDER BY 1;

SELECT q1 FROM int8_tbl EXCEPT ALL SELECT DISTINCT q2 FROM int8_tbl ORDER BY 1;

SELECT q1 FROM int8_tbl EXCEPT ALL SELECT q1 FROM int8_tbl FOR NO KEY UPDATE;

SELECT 4, 5, 6;

SELECT 4, 5, 6;

SELECT 1, 2, 3 UNION SELECT 4, 5, 6 EXCEPT SELECT 4, 5, 6;

(SELECT 1, 2, 3 UNION SELECT 4, 5, 6 ORDER BY 1, 2) EXCEPT SELECT 4, 5, 6;

SET enable_hashagg = 'on';

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    UNION
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    UNION
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    INTERSECT
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    INTERSECT
    SELECT fivethous FROM tenk1
  )
  AS ss;

SET enable_indexscan = off;

SELECT unique1 FROM tenk1 EXCEPT SELECT unique2 FROM tenk1 WHERE unique2 <> 10;

SELECT unique1 FROM tenk1 EXCEPT SELECT unique2 FROM tenk1 WHERE unique2 <> 10;

RESET enable_indexscan;

SELECT q2, q1 FROM int8_tbl ORDER BY 1, 2;

SELECT q2, q1 FROM int8_tbl ORDER BY 1, 2;

SELECT * FROM int8_tbl ORDER BY 1, 2;

SET enable_hashagg = off;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    UNION
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    UNION
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    INTERSECT
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT
  COUNT(*)
FROM
  (
    SELECT unique1 FROM tenk1
    INTERSECT
    SELECT fivethous FROM tenk1
  )
  AS ss;

SELECT unique1 FROM tenk1 EXCEPT SELECT unique2 FROM tenk1 WHERE unique2 <> 10;

SELECT unique1 FROM tenk1 EXCEPT SELECT unique2 FROM tenk1 WHERE unique2 <> 10;

SELECT f1 FROM int4_tbl
UNION ALL
(SELECT unique1 FROM tenk1
UNION
SELECT unique2 FROM tenk1);

RESET enable_hashagg;

SET enable_hashagg = 'on';

SELECT
  x
FROM
  (
    VALUES
      (CAST('11' AS BIT VARYING)),
      (CAST('10' AS BIT VARYING))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (CAST('11' AS BIT VARYING)),
      (CAST('10' AS BIT VARYING))
  )
  AS _ (x);

SET enable_hashagg = off;

SELECT
  x
FROM
  (
    VALUES
      (CAST('11' AS BIT VARYING)),
      (CAST('10' AS BIT VARYING))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (CAST('11' AS BIT VARYING)),
      (CAST('10' AS BIT VARYING))
  )
  AS _ (x);

RESET enable_hashagg;

SET enable_hashagg = 'on';

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT x FROM (VALUES (ARRAY[1, 2]), (ARRAY[1, 4])) AS _ (x);

SELECT x FROM (VALUES (ARRAY[1, 2]), (ARRAY[1, 4])) AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES
      (ARRAY[CAST('10' AS BIT VARYING)]),
      (ARRAY[CAST('11' AS BIT VARYING)])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (ARRAY[CAST('10' AS BIT VARYING)]),
      (ARRAY[CAST('01' AS BIT VARYING)])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES
      (ARRAY[CAST('10' AS BIT VARYING)]),
      (ARRAY[CAST('11' AS BIT VARYING)])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (ARRAY[CAST('10' AS BIT VARYING)]),
      (ARRAY[CAST('01' AS BIT VARYING)])
  )
  AS _ (x);

SET enable_hashagg = off;

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT x FROM (VALUES (ARRAY[1, 2]), (ARRAY[1, 4])) AS _ (x);

SELECT x FROM (VALUES (ARRAY[1, 2]), (ARRAY[1, 4])) AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 3])
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ARRAY[1, 2]), (ARRAY[1, 4])
  )
  AS _ (x);

RESET enable_hashagg;

SET enable_hashagg = 'on';

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT x FROM (VALUES (ROW(1, 2)), (ROW(1, 4))) AS _ (x);

SELECT x FROM (VALUES (ROW(1, 2)), (ROW(1, 4))) AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES
      (ROW(CAST('10' AS BIT VARYING))),
      (ROW(CAST('11' AS BIT VARYING)))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (ROW(CAST('10' AS BIT VARYING))),
      (ROW(CAST('01' AS BIT VARYING)))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES
      (ROW(CAST('10' AS BIT VARYING))),
      (ROW(CAST('11' AS BIT VARYING)))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (ROW(CAST('10' AS BIT VARYING))),
      (ROW(CAST('01' AS BIT VARYING)))
  )
  AS _ (x);

CREATE TYPE ct1 AS (f1 BIT VARYING);

SELECT
  x
FROM
  (
    VALUES
      (
        CAST(ROW(CAST('10' AS BIT VARYING))
        AS ct1)
      ),
      (
        CAST(ROW(CAST('11' AS BIT VARYING))
        AS ct1)
      )
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (
        CAST(ROW(CAST('10' AS BIT VARYING))
        AS ct1)
      ),
      (
        CAST(ROW(CAST('01' AS BIT VARYING))
        AS ct1)
      )
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES
      (
        CAST(ROW(CAST('10' AS BIT VARYING))
        AS ct1)
      ),
      (
        CAST(ROW(CAST('11' AS BIT VARYING))
        AS ct1)
      )
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES
      (
        CAST(ROW(CAST('10' AS BIT VARYING))
        AS ct1)
      ),
      (
        CAST(ROW(CAST('01' AS BIT VARYING))
        AS ct1)
      )
  )
  AS _ (x);

DROP TYPE ct1;

SET enable_hashagg = off;

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
UNION
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT x FROM (VALUES (ROW(1, 2)), (ROW(1, 4))) AS _ (x);

SELECT x FROM (VALUES (ROW(1, 2)), (ROW(1, 4))) AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 3))
  )
  AS _ (x)
EXCEPT
SELECT
  x
FROM
  (
    VALUES (ROW(1, 2)), (ROW(1, 4))
  )
  AS _ (x);

SELECT CAST('123' AS XID) UNION SELECT CAST('123' AS XID);

RESET enable_hashagg;

SELECT f1 FROM int4_tbl ORDER BY 1;

SELECT f1 FROM float8_tbl EXCEPT SELECT f1 FROM int4_tbl ORDER BY 1;

SELECT q2 FROM int8_tbl UNION ALL SELECT q2 FROM int8_tbl ORDER BY 1;

SELECT q1 FROM int8_tbl
INTERSECT
(SELECT q2 FROM int8_tbl
UNION ALL
SELECT q2 FROM int8_tbl)
ORDER BY 1;

(SELECT q1 FROM int8_tbl
INTERSECT
SELECT q2 FROM int8_tbl
ORDER BY 1)
UNION ALL
SELECT q2 FROM int8_tbl;

SELECT q1 FROM int8_tbl
UNION ALL
SELECT q2 FROM int8_tbl
EXCEPT
SELECT q1 FROM int8_tbl
ORDER BY 1;

SELECT q1 FROM int8_tbl
UNION ALL
(SELECT q2 FROM int8_tbl
EXCEPT
SELECT q1 FROM int8_tbl
ORDER BY 1);

SELECT q1 FROM int8_tbl
UNION ALL
SELECT q2 FROM int8_tbl
EXCEPT
SELECT q1 FROM int8_tbl
ORDER BY 1;

SELECT q1, q2 FROM int8_tbl EXCEPT SELECT q2, q1 FROM int8_tbl ORDER BY q2, q1;

SELECT q1 FROM int8_tbl EXCEPT SELECT q2 FROM int8_tbl ORDER BY q2 LIMIT 1;

SELECT q1 FROM int8_tbl
EXCEPT
(SELECT
  q2
FROM
  int8_tbl
ORDER BY q2
LIMIT 1)
ORDER BY 1;

SELECT * FROM int8_tbl;

SELECT UNION SELECT;

SELECT;

SELECT EXCEPT SELECT;

SET enable_hashagg = 'true';

SET enable_sort = 'false';

SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) UNION ALL SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5)
INTERSECT ALL
SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) EXCEPT SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) EXCEPT ALL SELECT FROM generate_series(1, 3);

SET enable_hashagg = 'false';

SET enable_sort = 'true';

SELECT FROM generate_series(1, 5) UNION SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) UNION SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) UNION ALL SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5)
INTERSECT ALL
SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) EXCEPT SELECT FROM generate_series(1, 3);

SELECT FROM generate_series(1, 5) EXCEPT ALL SELECT FROM generate_series(1, 3);
